fix chart text overlap

--- a/css/chata-styles.css
+++ b/css/chata-styles.css
@@ -351,7 +351,8 @@ body{
 .autoql-vanilla-chata-response-content-container {
     background-color: inherit;
     font-size: 14px;
-    height: calc(100% - 60px);
+    /* height: calc(100% - 60px); */
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -646,7 +647,6 @@ body{
 .autoql-vanilla-chata-response-content-container {
     background-color: inherit;
     font-size: 14px;
-    height: calc(100% - 60px);
     font-family: var(--autoql-vanilla-font-family);
     letter-spacing: 0.04em;
 }
